<resources>
    <string name="app_name">Mapbox Navigation SDK for Android</string>

    <string name="title_mock_navigation">Mock Navigation</string>
    <string name="description_mock_navigation">Mock a navigation session using a mock location engine.</string>

    <string name="title_offboard_router_kotlin">Offboard Router Kotlin</string>
    <string name="description_offboard_router_kotlin">Shows routes using offboard routing api in Kotlin code.</string>

    <string name="title_offboard_router_java">Offboard Router Java</string>
    <string name="description_offboard_router_java">Shows routes using offboard routing api in Java code.</string>

    <string name="title_onboard_router_kotlin" translatable="false">Onboard Router Kotlin</string>
    <string name="description_onboard_router_kotlin" translatable="false">Shows routes using onboard routing api in Kotlin code.</string>

    <string name="title_onboard_router_java" translatable="false">Onboard Router Java</string>
    <string name="description_onboard_router_java" translatable="false">Shows routes using onboard routing api in Java code.</string>

    <string name="title_trip_service_kotlin">Trip Service Kotlin</string>
    <string name="description_trip_service_kotlin">Shows how to use the Service to push notifications in Kotlin code.</string>

    <string name="title_trip_service_java">Trip Service Java</string>
    <string name="description_trip_service_java">Shows how to use the Service to push notifications in Java code.</string>

    <string name="title_off_route_detection">Off route detection</string>
    <string name="description_off_route_detection">Uses the Route Utils class to determine if a users off route.</string>

    <string name="title_offline_reroute">Offline Reroute</string>
    <string name="description_offline_reroute">Test the offline reroute function inside the navigation SDK</string>

    <string name="title_offline_region_download">Offline region download</string>
    <string name="description_offline_region_download">Download offline routing tiles</string>

    <string name="title_reroute">Reroute</string>
    <string name="description_reroute">Test the reroute function inside the navigation SDK</string>

    <string name="title_navigation_route_ui">Navigation Map Route</string>
    <string name="description_navigation_route_ui">Shows different styles using NavigationMapRoute</string>

    <string name="title_navigation_launcher">Navigation Launcher</string>
    <string name="description_navigation_launcher">Drop-in UI experience</string>

    <string name="title_end_navigation">End Navigation</string>
    <string name="description_end_navigation">Shows how to end navigation using NavigationView</string>

    <string name="title_dual_navigation_map">Dual Navigation Map</string>
    <string name="description_dual_navigation_map">Shows how to add NavigationView and MapView in the same layout</string>

    <string name="title_waypoint_navigation">Waypoint Navigation</string>
    <string name="description_waypoint_navigation">Navigation with waypoints between destinations</string>

    <string name="title_embedded_navigation">Embedded Navigation</string>
    <string name="description_embedded_navigation">Navigation in a view which contains other views</string>

    <string name="title_fragment_navigation">NavigationView implemented with Fragment</string>
    <string name="description_fragment_navigation">NavigationView implemented with Fragment</string>

    <string name="title_component_navigation">MapboxNavigation with UI components</string>
    <string name="description_component_navigation">MapboxNavigation with UI components</string>

    <string name="settings">Settings</string>
    <string name="simulate_route">Simulate Route</string>
    <string name="language">Language</string>
    <string name="unit_type">Unit Type</string>
    <string name="route_profile">Route Profile</string>

    <string name="unit_type_key" translatable="false">unit_type</string>
    <string name="simulate_route_key" translatable="false">simulate_route</string>
    <string name="language_key" translatable="false">language</string>
    <string name="route_profile_key" translatable="false">route_profile</string>
    <string name="default_route_profile">driving-traffic</string>
    <string name="view_examples_key" translatable="false">view_examples</string>
    <string name="git_hash_key" translatable="false">git_hash</string>
    <string name="offline_version_key" translatable="false">offline_preference_key</string>
    <string name="offline_region_download" translatable="false">offline_region_download</string>
    <string name="offline_enabled" translatable="false">offline_region_download</string>
    <string name="default_locale" translatable="false">default_for_device</string>
    <string name="default_unit_type" translatable="false">default_for_device</string>
    <string name="current_night_mode" translatable="false">current_night_mode</string>
    <string name="was_in_tunnel" translatable="false">was_in_tunnel</string>
    <string name="was_navigation_stopped" translatable="false">was_navigation_stopped</string>

    <string name="error_route_not_available">Current route is not available</string>
    <string name="error_select_longer_route">Please select a longer route</string>
    <string name="error_valid_route_not_found">Valid route not found.</string>
    <string name="explanation_long_press_waypoint">Long press map to place waypoint</string>
    <string name="offline_disabled">Offline Disabled</string>

    <string name="blue" translatable="false">#4264fb</string>

    <string name="hint_where_to">Where to?</string>
    <string name="autocompleteBehavior" translatable="false">com.mapbox.services.android.navigation.testapp.example.ui.autocomplete.AutocompleteBottomSheetBehavior</string>
    <string name="download_complete">Download is complete!</string>
    <string name="offline_routing">Offline routing</string>
    <string name="offline_enabled_title">Offline routing enabled</string>
    <string name="offline_category_title">Offline</string>
    <string name="offline_region_download_title">Download offline region</string>
    <string name="offline_version_title">Choose offline version</string>
    <string name="general_category_title">General</string>
</resources>
