<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Preference
        android:key="@string/view_examples_key"
        android:title="View List of Navigation Examples">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.mapbox.services.android.navigation.testapp"
            android:targetClass="com.mapbox.services.android.navigation.testapp.MainActivity" />
    </Preference>

    <CheckBoxPreference
        android:key="@string/simulate_route_key"
        android:title="@string/simulate_route"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="@string/offline_preference_key"
        android:title="@string/offline_routing"
        android:defaultValue="false" />

    <ListPreference
        android:key="@string/language_key"
        android:title="@string/language"
        android:entries="@array/language_array"
        android:entryValues="@array/language_values_array"
        android:defaultValue="@string/default_locale"/>

    <ListPreference
        android:key="@string/unit_type_key"
        android:title="@string/unit_type"
        android:entries="@array/unit_type_array"
        android:entryValues="@array/unit_type_values_array"
        android:defaultValue="@string/default_unit_type"/>

    <ListPreference
        android:entries="@array/route_profile_array"
        android:entryValues="@array/route_profile_values_array"
        android:key="@string/route_profile_key"
        android:title="@string/route_profile"/>
</PreferenceScreen>